--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -27,4 +27,4 @@ log4j.appender.E.layout = org.apache.log4j.PatternLayout
 log4j.appender.E.layout.ConversionPattern = [%p] [%-d{yyyy-MM-dd HH:mm:ss}] %C.%M(%L) | %m%n
 ### log4j.appender.E.Encoding=UTF-8
 
-log4j.logger.com.wjy.ssm.mapper = DEBUG
+log4j.logger.com.wjy.ssm.business.mapper = DEBUG
