--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -18,6 +18,9 @@
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
+  <listener>
+    <listener-class>com.wjy.ssm.kafka.ConsumerStartListener</listener-class>
+  </listener>
 
   <filter>
     <filter-name>encodingFilter</filter-name>
